<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorPrimary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:orientation="vertical"
        >

        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.6"
            android:padding="@dimen/imageSize"
        >

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/platzigram"
                android:paddingBottom="@dimen/padding_horizontal_login"
                android:paddingLeft="@dimen/padding_horizontal_login"
                android:paddingRight="@dimen/padding_horizontal_login"
                android:paddingTop="@dimen/padding_horizontal_login"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_horizontal_login"
            android:orientation="vertical"
            >
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_username"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/hint_password"
                        />
                </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/login"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_button_login"
                android:theme="@style/RaisedButtonDark"
                android:onClick="GoContainerActivity"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_centerInParent="true">

                <TextView
                    android:id="@+id/not_HaveAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_Have_account"
                    android:textColor="@color/editTextColorWhite"
                    android:textSize="@dimen/editText_textSize_count"
                    android:textStyle="bold"
                    android:layout_marginLeft="80dp"/>

                <TextView
                    android:id="@+id/CreateAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/not_HaveAccount"
                    android:onClick="GoCreateAccount"
                    android:text="@string/CreateHere"
                    android:textColor="@color/editTextColorWhite"
                    android:textSize="@dimen/editText_textSize_count"
                    android:textStyle="bold" />
                </LinearLayout>

            </RelativeLayout>


        </LinearLayout>
        </ScrollView>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>