<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pictureCard"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_cardView"
    cardview:cardCornerRadius="@dimen/cornerradius_cardview"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageCard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_cardView"
            android:background="@drawable/king"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/backGround_text_Card"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activty_vertical_margin"
            android:paddingBottom="@dimen/activty_vertical_margin">

            <TextView
                android:id="@+id/username_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_card"
                android:textColor="@color/editTextColorWhite"
                android:textSize="@dimen/textsize_username_card" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/first_word"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/firstword_card"
                    android:textColor="@color/editTextColorWhite"
                    android:textSize="@dimen/firstword_textsize_card" />

                <TextView
                    android:id="@+id/time_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/timecard_marginleft_card"
                    android:text="@string/timeword_card"
                    android:textColor="@color/editTextColorWhite"
                    android:textSize="@dimen/firstword_textsize_card" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/like_margintop_card"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/likeCheck_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>


        </LinearLayout>


    </FrameLayout>


</android.support.v7.widget.CardView>